force-app/main/default/objects/vlocity_ins__FulfilmentDiagramOPD__c/vlocity_ins__FulfilmentDiagramOPD__c.object-meta.xml
<CustomObject>
    <description>Represents a junction between a Fulfilment Diagram and an Orchestration Plan Definition.</description>
    <label>Fulfilment Diagram OPD</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfilment Diagram OPDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>