force-app/main/default/objects/vlocity_ins__FulfilmentDiagramOPD__c/fields/vlocity_ins__FulfilmentDiagram__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FulfilmentDiagram__c</fullName>
    <description>The parent Fulfilment Diagram associated with the detail Fulfilment Diagram OPD.</description>
    <inlineHelpText>The parent Fulfilment Diagram associated with the detail Fulfilment Diagram OPD.</inlineHelpText>
    <label>Fulfilment Diagram</label>
    <referenceTo>vlocity_ins__FulfilmentDiagram__c</referenceTo>
    <relationshipLabel>Fulfilment Diagram OPDs</relationshipLabel>
    <relationshipName>FulfilmentDiagramOPDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>