force-app/main/default/objects/vlocity_ins__FulfilmentDiagramOPD__c/fields/vlocity_ins__OrchestrationPlanDefinition__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrchestrationPlanDefinition__c</fullName>
    <description>The detail Orchestration Plan Definition associated with the parent Fulfilment Diagram OPD.</description>
    <inlineHelpText>The detail Orchestration Plan Definition associated with the parent Fulfilment Diagram OPD.</inlineHelpText>
    <label>Orchestration Plan Definition</label>
    <referenceTo>vlocity_ins__OrchestrationPlanDefinition__c</referenceTo>
    <relationshipLabel>Fulfilment Diagram OPDs</relationshipLabel>
    <relationshipName>OrchestrationPlanDefinitions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>