force-app/main/default/objects/vlocity_ins__FulfilmentDiagramOPD__c/fields/vlocity_ins__SwimlaneOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SwimlaneOrder__c</fullName>
    <description>The swimlane display order for the Orchestration Plan Definition. For example, if 3 is specified, the Orchestration Plan Definition displays in the third swimlane. Minimum of 1 and maximum of 99.</description>
    <inlineHelpText>The swimlane display order for the Orchestration Plan Definition. For example, if 3 is specified, the Orchestration Plan Definition displays in the third swimlane. Minimum of 1 and maximum of 99.</inlineHelpText>
    <label>Swimlane Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>